--- a/week_1/notebook.ipynb
+++ b/week_1/notebook.ipynb
@@ -20,6 +20,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "3 + 2\n",
+    "1 + 2 + 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "True"
    ]
   },
@@ -38,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "True or True"
+    "True and False"
    ]
   },
   {
@@ -48,6 +58,15 @@
    "outputs": [],
    "source": [
     "text = \"salut\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int(\"54\")"
    ]
   },
   {
@@ -68,6 +87,13 @@
     "age = 18.5732675555\n",
     "nom = \"Paul\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -139,6 +165,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "7 / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "type(7 / 2)"
    ]
   },
@@ -157,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "7 // 2.0"
+    "7.0 // 2.5"
    ]
   },
   {
@@ -193,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x[3]"
+    "x[0]"
    ]
   },
   {
@@ -256,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x[1:3]"
+    "x[2:4]"
    ]
   },
   {
@@ -266,6 +301,26 @@
    "outputs": [],
    "source": [
     "x[-3:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.array([3, 4, 5]) + 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[3, 4, 5] + 42"
    ]
   },
   {
@@ -345,6 +400,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "d = {\"x\": 5, \"y\": 76, 76: \"x\"}"
    ]
@@ -373,7 +435,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "d.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 55"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x += 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "4 in {3: 4, 5: 5}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "s = {4, 5, 6, 4, 5}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = set([4, 5, 6])"
    ]
   },
   {
@@ -400,8 +525,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s"
+    "type(s)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "4 in s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set([3, 4, 5, 5, 6, 5, 5, 5, 7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -442,7 +592,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "t[0] = 4"
@@ -468,8 +620,14 @@
     "\n",
     "while i < 10:\n",
     "    s += i\n",
+    "\n",
     "    i += 1\n",
     "    \n",
+    "    j = i\n",
+    "    \n",
+    "    print(j)\n",
+    "\n",
+    "print(j)    \n",
     "print(s)"
    ]
   },
@@ -493,11 +651,110 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "it = iter(range(1, 10 ** 10))\n",
+    "type(it)\n",
+    "next(it), next(it)\n",
+    "\n",
+    "it = list(it)\n",
+    "it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x = [\"first\", 2, 3, 4]\n",
     "\n",
     "for element in x:\n",
     "    print(element)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {\"key\": \"value\", \"other key\": \"same value\"}\n",
+    "\n",
+    "for a in d.values():\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for a, b in [(2, 3), (4, 5), (9, 10)]:\n",
+    "    print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for a, [b, c] in [(2, [3, 5]), (4, [3, 2]), (9, [10, 10])]:\n",
+    "    print(a, b, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [1, 2, 3, 4, 5, 6]\n",
+    "y = ['a', 'b', 'c', 'd', 'e']\n",
+    "\n",
+    "for i in range(min(len(x), len(y))):\n",
+    "    print(x[i], y[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for a, b in zip(x, y):\n",
+    "    print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -557,7 +814,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if 55 == 55 == 55:\n",
+    "if 55 == 55 and 55 == 55:\n",
     "    print(\"ils sont tous égaux\")"
    ]
   },
@@ -573,6 +830,15 @@
     "    print(2)\n",
     "elif 4 == 4:\n",
     "    print(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# int x = 4 < 6 ? 42 : 41;"
    ]
   },
   {
@@ -625,7 +891,9 @@
     "\n",
     "for i in range(10):\n",
     "    if i % 2 == 1:\n",
-    "        xs.append(i ** 2)"
+    "        xs.append(i ** 2)\n",
+    "        \n",
+    "xs"
    ]
   },
   {
@@ -665,7 +933,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[i ** j for j in range(4) for i in range(10)];"
+    "[i ** j for j in range(4) for i in range(1, 10, 2)]"
    ]
   },
   {
@@ -687,6 +955,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "it = (i for i in range(550) if i % 3 == 0 and i % 4 == 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -703,6 +987,24 @@
    "source": [
     "def foo(x, y=0, z=0):\n",
     "    return x + y + z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo(1, 2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo(x=3, z=5, y=8)"
    ]
   },
   {
@@ -732,7 +1034,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar(3, z=4)"
+    "()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bar(3, z=4, y=3)"
    ]
   },
   {
@@ -780,6 +1091,50 @@
    "source": [
     "baz(*x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "baz(*{5, 4, 3, \" salut\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hash(frozenset({5, 4, 3, \" salut\"}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hash(\" salu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = {3, 4, 2}\n",
+    "s.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
