--- a/week_1/notebook.ipynb
+++ b/week_1/notebook.ipynb
@@ -1533,24 +1533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Madike's primes iterator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def x():\n",
-    "  \n",
-    "    i = 0\n",
-    "    while True:\n",
-    "       \n",
-    "        yield i\n",
-    "        \n",
-    "        \n",
-    "        i += 1"
+    "## yield"
    ]
   },
   {
@@ -1586,58 +1569,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def is_preums(x):\n",
-    "    r=1\n",
-    "    for i in range(2,x):\n",
-    "        if (x//i==x/i):\n",
-    "            r=0\n",
-    "    return r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "next(y4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import itertools"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%timeit\n",
-    "\n",
-    "y4 = filter(is_preums, x())\n",
-    "y5 = itertools.takewhile(lambda x: x < 5000, y4)\n",
-    "y = list(y5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -1648,40 +1579,6 @@
    "source": [
     "## Classes"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = [1, 2, 3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.pop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1710,6 +1607,9 @@
     "    \n",
     "    def __getitem__(self, index):\n",
     "        raise IndexError(\"list index out of range\")\n",
+    "        \n",
+    "    def __call__(self):\n",
+    "        return self\n",
     "    \n",
     "    def foo(self, x):\n",
     "        self.attr1.append(x)\n",
@@ -1748,9 +1648,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\"salut\" in \"fjdskfjldsjf salut jdskadjsla\""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
