--- a/week_1/notebook.ipynb
+++ b/week_1/notebook.ipynb
@@ -851,6 +851,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if [0]:\n",
+    "    print(\"ok\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bool([0])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1187,7 +1206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bool, string, numbers\n",
+    "# Bool, string, numbers, None\n",
     "\n",
     "x = 4\n",
     "y = x\n",
@@ -1234,6 +1253,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x is y"
    ]
   },
@@ -1243,7 +1271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x == [1, 2, 3]"
+    "x is [1, 2, 3]"
    ]
   },
   {
@@ -1253,6 +1281,20 @@
    "outputs": [],
    "source": [
     "x.copy() is x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [1, 2]\n",
+    "y = x.copy()\n",
+    "x += [3]\n",
+    "\n",
+    "print(x)\n",
+    "print(y)"
    ]
   },
   {
@@ -1276,6 +1318,13 @@
     "\n",
     "print(x, y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1334,8 +1383,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x[2][1] is y[2][1]"
+    "x[2][1] == y[2][1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1349,9 +1405,78 @@
     "z = [y]\n",
     "y.append(z)\n",
     "\n",
-    "del x\n",
-    "del y\n",
-    "del z\n"
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [1, 2, 3]\n",
+    "x[0], x[1], x[2] = 3, 2, 1\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ajouter(x, truc=[]):\n",
+    "    truc.append(x)\n",
+    "    return truc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ajouter.__defaults__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ajouter(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ajouter(1, truc=[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ajouter(x, truc=None):\n",
+    "    if truc is None:\n",
+    "        truc = []\n",
+    "    truc.append(x)\n",
+    "    return truc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ajouter(3)"
    ]
   },
   {
@@ -1369,17 +1494,200 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def f(x):\n",
+    "    return x\n",
+    "\n",
+    "f()\n",
+    "\n",
+    "x = []\n",
+    "x[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "try:\n",
-    "    #[1, 2, 3][8]\n",
-    "    #1 / 0\n",
+    "    [1, 2, 3][8]\n",
+    "    1 / 0\n",
     "    1 + 1\n",
     "except ZeroDivisionError:\n",
     "    print(\"divise pas par 0\")\n",
     "except IndexError:\n",
     "    print(\"autre erreur\")\n",
     "else:\n",
-    "    print(\"tout va bien\")"
+    "    print(\"tout va bien\")\n",
+    "    \n",
+    "print(\"tout va pas forcément bien\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MaClasse:\n",
+    "    def __init__(self, a):\n",
+    "        print(\"__init__\")\n",
+    "        self.attr1 = []\n",
+    "        self.a = a\n",
+    "        \n",
+    "    def __add__(self, x):\n",
+    "        print(\"__add__({}, {})\".format(self, x))\n",
+    "        return MaClasse()\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return \"Salut {}\".format(self.a)\n",
+    "    \n",
+    "    def __del__(self):\n",
+    "        print(\"Adieu\")\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return 0\n",
+    "    \n",
+    "    def __contains__(self, x):\n",
+    "        return x == 42\n",
+    "    \n",
+    "    def __getitem__(self, index):\n",
+    "        return 42\n",
+    "        #raise IndexError(\"list index out of range\")\n",
+    "        \n",
+    "    def __call__(self, x, y):\n",
+    "        return x + y\n",
+    "    \n",
+    "    def __equal__(self, x):\n",
+    "        return True\n",
+    "\n",
+    "    def foo(self, x):\n",
+    "        self.attr1.append(x)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = MaClasse(\"Alice\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x + 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "43 in x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class A:\n",
+    "    def __init__(self, a):\n",
+    "        self.a = a\n",
+    "            \n",
+    "    def bar(self, b):\n",
+    "        return self.a + b\n",
+    "\n",
+    "x = A(42)\n",
+    "x.bar(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x(3, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x == 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "5 in [1,2,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "33 in x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "42 in x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1387,6 +1695,115 @@
    "source": [
     "## Iterators"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "it = iter(range(4))\n",
+    "\n",
+    "next(it), next(it), next(it), next(it), next(it)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import count, permutations, combinations, combinations_with_replacement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in permutations(\"abc\"):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in combinations(\"abcd\", 2):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in combinations_with_replacement(\"abcd\", 2):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class quelques_nombres:\n",
+    "    def __init__(self):\n",
+    "        print(\"__init__\")\n",
+    "        self.c = 0\n",
+    "        \n",
+    "    def __iter__(self):\n",
+    "        print(\"__iter__\")\n",
+    "        self.c = 0\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        print(\"__next__\")\n",
+    "        self.c += 1\n",
+    "        if self.c == 10:\n",
+    "            raise StopIteration\n",
+    "        return self.c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "it = quelques_nombres()\n",
+    "\n",
+    "for i in it:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1404,16 +1821,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "def tous_les_nombres():\n",
-    "    print(\"initialisation\")\n",
-    "    i = 0\n",
-    "    while True:\n",
-    "        print(\"retourne {}\".format(i))\n",
-    "        yield i\n",
-    "        \n",
-    "        print(\"incrémente i\")\n",
-    "        i += 1"
+    "it = quelques_nombres()\n",
+    "\n",
+    "y2 = map(power, it)"
    ]
   },
   {
@@ -1422,73 +1840,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = tous_les_nombres()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "next(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y2 = map(power, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "next(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "next(y2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def is_even(x):\n",
-    "    return x % 2 == 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y3 = filter(is_even, y2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "next(y3)"
+    "for i in y2:\n",
+    "    print(i)"
    ]
   },
   {
@@ -1497,6 +1850,60 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_even(x):\n",
+    "    print('is {} even ?'.format(x))\n",
+    "    if x % 2 == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y1 = quelques_nombres()\n",
+    "y2 = map(power, y1)\n",
+    "y3 = filter(is_even, y2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in y3:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in zip(quelques_nombres(), map(power, quelques_nombres())):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1530,6 +1937,137 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y2 = map(power, quelques_nombres())\n",
+    "y2 = (power(i) for i in quelques_nombres())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "any(i % 2 == 0 for i in range(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all(i % 2 == 0 for i in range(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min(range(10)), max(range(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "it = quelques_nombres()\n",
+    "min(it)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "it = quelques_nombres()\n",
+    "sum(it)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import cycle, repeat, chain, takewhile, product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(iter(\"abcd\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y1 = iter(\"abcd\")\n",
+    "y2 = iter(range(5))\n",
+    "y3 = iter([True, False])\n",
+    "y4 = product(y1, y2, y3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i1 in y1:\n",
+    "    for i2 in y2:\n",
+    "        for i3 in y3:\n",
+    "            print((i1, i2, i3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in y4:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+    "\n",
+    "[[1, 4, 7], [2, 5, 8], [3, 6, 9]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[list(i) for i in zip(*x)]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1545,12 +2083,23 @@
     "def tous_les_nombres():\n",
     "    print(\"initialisation\")\n",
     "    i = 0\n",
-    "    while True:\n",
+    "    while i < 10:\n",
     "        print(\"retourne {}\".format(i))\n",
     "        yield i\n",
     "        \n",
     "        print(\"incrémente i\")\n",
-    "        i += 1"
+    "        i += 1\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in tous_les_nombres():\n",
+    "    print(i)"
    ]
   },
   {
@@ -1570,112 +2119,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## Classes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MaClasse:\n",
-    "    def __init__(self):\n",
-    "        self.attr1 = []\n",
-    "        \n",
-    "    def __add__(self, x):\n",
-    "        return MaClasse()\n",
-    "    \n",
-    "    def __repr__(self):\n",
-    "        return \"Salut\"\n",
-    "    \n",
-    "    def __del__(self):\n",
-    "        print(\"Adieu\")\n",
-    "        \n",
-    "    def __len__(self):\n",
-    "        return 0\n",
-    "    \n",
-    "    def __contains__(self, x):\n",
-    "        return x == 42\n",
-    "    \n",
-    "    def __getitem__(self, index):\n",
-    "        raise IndexError(\"list index out of range\")\n",
-    "        \n",
-    "    def __call__(self):\n",
-    "        return self\n",
-    "    \n",
-    "    def foo(self, x):\n",
-    "        self.attr1.append(x)\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = MaClasse()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x[43232]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[][3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "5 in [1,2,4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "33 in x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "42 in x"
-   ]
   },
   {
    "cell_type": "markdown",
